UPDATE: to get etterlevelse to doc filtered by tema
Co-authored-by: shayany <shayan.yazdanmehr@nav.no>